--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 /bin
 /node_modules
 /target
+/servidor
 # Packages #
 ############
 # it's better to unpack these files and commit the raw source
