--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,8 @@
 /bin
 /node_modules
 /target
-/servidor
+servidor/*
+node_modules/*
 # Packages #
 ############
 # it's better to unpack these files and commit the raw source
