--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
   },
   "private": true,
   "dependencies": {
+    "Buffer": "0.0.0",
+    "base-64": "^0.1.0",
+    "body-parser": "1.16.0",
     "express": "3.4.4",
-    "body-parser": "1.16.0"
+    "file-base64": "^1.0.0",
+    "path": "^0.12.7",
+    "utf8": "^3.0.0"
   }
 }
