--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "1.16.0",
     "express": "3.4.4",
     "file-base64": "^1.0.0",
+    "form-data": "^2.3.2",
     "path": "^0.12.7",
     "utf8": "^3.0.0"
   }
