--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "Buffer": "0.0.0",
     "base-64": "^0.1.0",
     "body-parser": "1.16.0",
+    "connect-multiparty": "^2.1.1",
     "express": "3.4.4",
     "file-base64": "^1.0.0",
     "form-data": "^2.3.2",
+    "multer": "^1.3.1",
     "path": "^0.12.7",
     "utf8": "^3.0.0"
   }
